[tool.poetry]
name = "killstats"
version = "0.1.0"
description = "Kill Stats Discord Bot"
authors = ["Twoje Imię <twojemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
requests = "2.32.4"
apscheduler = "3.10.1"
pillow = "9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
