[tool.poetry]
name = "killstats"
version = "0.1.0"
description = "Statystyki KillStats"
authors = ["Twoje Imię <email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.2"
requests = "2.32.4"
apscheduler = "3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
